src/objects/ProjectTaskService__e.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ProjectTaskService</label>
    <pluralLabel>ProjectTaskServices</pluralLabel>
</CustomObject>